pom.xml updates